--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
 	"description": "Vite starter pack",
 	"main": "index.html",
 	"scripts": {
+		"test": "hardhat test",
+		"compile": "hardhat compile",
+		"node": "hardhat node",
+		"deploy:all": "hardhat run scripts/deploy.ts --network localhost",
 		"dev": "vite",
 		"build": "vite build",
 		"serve": "npm build && vite preview",
 		"lint": "eslint --ext .ts --ext .tsx",
 		"lint:css": "stylelint src/**/*.css",
 		"tsc:check": "tsc --noEmit",
-		"test": "vitest run --reporter verbose",
-		"test:watch": "vitest watch --reporter verbose",
-		"test:coverage": "npm test -- --coverage",
-		"test:update": "npm test -- --update",
 		"prepare": "is-ci || husky install"
 	},
 	"keywords": [
@@ -62,6 +62,19 @@
 		"typescript": "^4.6.3",
 		"vite": "^2.9.5",
 		"vite-tsconfig-paths": "^3.4.1",
-		"vitest": "^0.9.2"
+		"vitest": "^0.9.2",
+		"@nomiclabs/hardhat-ethers": "^2.0.5",
+		"@nomiclabs/hardhat-waffle": "^2.0.3",
+		"@types/chai": "^4.3.1",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "^17.0.25",
+		"chai": "^4.3.6",
+		"dotenv": "^16.0.0",
+		"ethereum-waffle": "^3.4.4",
+		"ethers": "^5.6.4",
+		"hardhat": "^2.9.3",
+		"html-webpack-plugin": "^5.5.0",
+		"ts-loader": "^9.2.8",
+		"ts-node": "^10.7.0"
 	}
 }
