--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ES6",
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"jsx": "react-jsx",
-		"module": "ESNext",
+		"module": "commonjs",
 		"types": [
 			"vite/client",
 			"vitest/globals",
